use the nicer Set.of to create immutable sets