@@ -1,9 +1,6 @@
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashSet;
 import java.util.Set;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -13,11 +10,11 @@ public class Ch7_3_Test {
 
     @BeforeAll
     public static void setupData() {
-        first = Collections.unmodifiableSet(new HashSet<>(Arrays.asList("one", "three", "four", "five")));
-        second = Collections.unmodifiableSet(new HashSet<>(Arrays.asList("two", "three", "five", "six")));
-        unionExpected = Collections.unmodifiableSet(new HashSet<>(Arrays.asList("one", "two", "three", "four", "five", "six")));
-        diffExpected = Collections.unmodifiableSet(new HashSet<>(Arrays.asList("one", "four")));
-        intersectExpected = Collections.unmodifiableSet(new HashSet<>(Arrays.asList("three", "five")));
+        first = Set.of("one", "three", "four", "five");
+        second = Set.of("two", "three", "five", "six");
+        unionExpected = Set.of("one", "two", "three", "four", "five", "six");
+        diffExpected = Set.of("one", "four");
+        intersectExpected = Set.of("three", "five");
     }
 
     @Test
